# web-status

./: .gitignore  CNAME  Cargo.toml  README.md
src/: main.rs
