[package]
name = "web-status"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
